tests/fixtures/positive/style/ModifierOrder.kt
package style

open public class Foo {
    final override public fun bar() {}
    abstract protected fun baz()
}
