tests/fixtures/negative/style/AbstractClassCanBeConcreteClass.kt
package style

abstract class Foo {
    abstract fun bar()
    fun baz(): Int = 42
}
